[workspace]
members = ["backend", "runner", "runner_schema"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
repository = "https://github.com/moriyoshi-kasuga/code-judgment"

[workspace.dependencies]
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = { version = "=1.0.140" }
