[workspace]
members = ["backend", "runner", "runner-schema"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
repository = "https://github.com/moriyoshi-kasuga/code-judgment"

[workspace.dependencies]
runner-schema = { path = "runner-schema" }

serde = { version = "=1.0.219", features = ["derive"] }
serde_json = { version = "=1.0.140" }
thiserror = { version = "=2.0.12" }
tokio = { version = "=1.45.0", features = ["full"] }
axum = { version = "=0.8.4", features = ["json"] }
more-convert = { version = "=0.13.0" }
enum-table = "=0.3.0"
envman = { version = "=1.2.3", features = ["derive"] }
log = "=0.4.27"
ulid = "=1.2.1"
env_logger = "=0.11.8"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
