[package]
name = "runner-schema"
edition.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
more-convert.workspace = true
enum-table.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
